--- a/index.html
+++ b/index.html
@@ -11,7 +11,46 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="app-container">
+      <div class="centered">
+        <div class="main-section">
+            <h2>PARIS</h2>
+            <h3>7°</h3>
+        </div>
+        <div class="app-list">
+            <li>
+              <div class="daily-list">
+                <ul>Lundi</ul>
+                <img src="images/cloud-solid.svg">
+              </div>
+              <div class="daily-list">
+                <ul>Mardi</ul>
+                <img src="images/cloud-solid.svg">
+              </div>
+              <div class="daily-list">
+                <ul>Mercredi</ul>
+                <img src="images/cloud-solid.svg">
+              </div>
+              <div class="daily-list">
+                <ul>Jeudi</ul>
+                <img src="images/cloud-solid.svg">
+              </div>
+              <div class="daily-list">
+                <ul>Vendredi</ul>
+                <img src="images/cloud-solid.svg">
+              </div>
+              <div class="daily-list">
+                <ul>Samedi</ul>
+                <img src="images/cloud-solid.svg">
+              </div>
+              <div class="daily-list">
+                <ul>Dimanche</ul>
+                <img src="images/cloud-solid.svg">
+              </div>
+            </li>
+        </div>
+      </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <script src="script.js"></script>
