--- a/index.html
+++ b/index.html
@@ -31,39 +31,60 @@
             <h2>PARIS</h2>
             <h3>7°</h3>
         </div>
-        <div class="app-list">
-            <li>
-              <div class="daily-list">
-                <ul>Lundi</ul>
-                <img src="images/cloud-solid.svg">
-              </div>
-              <div class="daily-list">
-                <ul>Mardi</ul>
-                <img src="images/cloud-solid.svg">
-              </div>
-              <div class="daily-list">
-                <ul>Mercredi</ul>
-                <img src="images/cloud-solid.svg">
-              </div>
-              <div class="daily-list">
-                <ul>Jeudi</ul>
-                <img src="images/cloud-solid.svg">
-              </div>
-              <div class="daily-list">
-                <ul>Vendredi</ul>
-                <img src="images/cloud-solid.svg">
-              </div>
-              <div class="daily-list">
-                <ul>Samedi</ul>
-                <img src="images/cloud-solid.svg">
-              </div>
-              <div class="daily-list">
-                <ul>Dimanche</ul>
-                <img src="images/cloud-solid.svg">
-              </div>
-            </li>
-        </div>
-      </div>
+		  <div class="app-list">
+			  <li>
+				  <div class="row">
+					  <div class="col-3 days">Lundi</div>
+					  <div class="col-1 p-0">
+						  <img class="img_list" src="images/cloud-solid.svg">
+					  </div>
+					  <div class="col temp">19°C/11°C</div>
+				  </div>
+				  <div class="row">
+					  <div class="col-3 days">Mardi</div>
+					  <div class="col-1 p-0">
+						  <img class="img_list" src="images/cloud-solid.svg">
+					  </div>
+					  <div class="col temp">17°C/14°C</div>
+				  </div>
+				  <div class="row">
+					  <div class="col-3 days">Mercredi</div>
+					  <div class="col-1 p-0">
+						  <img class="img_list" src="images/cloud-solid.svg">
+					  </div>
+					  <div class="col temp">20°C/13°C</div>
+				  </div>
+				  <div class="row">
+					  <div class="col-3 days">Jeudi</div>
+					  <div class="col-1 p-0">
+						  <img class="img_list" src="images/cloud-solid.svg">
+					  </div>
+					  <div class="col temp">20°C/12°C</div>
+				  </div>
+				  <div class="row">
+					  <div class="col-3 days">Vendredi</div>
+					  <div class="col-1 p-0">
+						  <img class="img_list" src="images/cloud-solid.svg">
+					  </div>
+					  <div class="col temp">22°C/15°C</div>
+				  </div>
+				  <div class="row">
+					  <div class="col-3 days">Samedi</div>
+					  <div class="col-1 p-0">
+						  <img class="img_list" src="images/cloud-solid.svg">
+					  </div>
+					  <div class="col temp">18°C/7°C</div>
+				  </div>
+				  <div class="row">
+					  <div class="col-3 days">Dimanche</div>
+					  <div class="col-1 p-0">
+						  <img class="img_list" src="images/cloud-solid.svg">
+					  </div>
+					  <div class="col temp">20°C/12°C</div>
+				  </div>
+			  </li>
+		  </div>
+	  </div>
     </div>
 
     <!-- Optional JavaScript -->
