--- a/index.html
+++ b/index.html
@@ -35,50 +35,50 @@
 			  <div class="card-body">
 				  <div class="row">
 					  <div class="col-4 days">Lundi</div>
-					  <div class="col-1 p-0">
-						  <img class="img_list" src="images/cloud-solid.svg">
+					  <div class="col-2 p-0">
+						  <img class="img_list" src="images/wind.png">
 					  </div>
 					  <div class="col temp">19°C/11°C</div>
 				  </div>
 				  <div class="row">
 					  <div class="col-4 days">Mardi</div>
-					  <div class="col-1 p-0">
+					  <div class="col-2 p-0">
 						  <img class="img_list" src="images/cloud-solid.svg">
 					  </div>
 					  <div class="col temp">17°C/14°C</div>
 				  </div>
 				  <div class="row">
 					  <div class="col-4 days">Mercredi</div>
-					  <div class="col-1 p-0">
+					  <div class="col-2 p-0">
 						  <img class="img_list" src="images/cloud-solid.svg">
 					  </div>
 					  <div class="col temp">20°C/13°C</div>
 				  </div>
 				  <div class="row">
 					  <div class="col-4 days">Jeudi</div>
-					  <div class="col-1 p-0">
-						  <img class="img_list" src="images/cloud-solid.svg">
+					  <div class="col-2 p-0">
+						  <img class="img_list" src="images/sun.png">
 					  </div>
 					  <div class="col temp">20°C/12°C</div>
 				  </div>
 				  <div class="row">
 					  <div class="col-4 days">Vendredi</div>
-					  <div class="col-1 p-0">
-						  <img class="img_list" src="images/cloud-solid.svg">
+					  <div class="col-2 p-0">
+						  <img class="img_list" src="images/sun.png">
 					  </div>
 					  <div class="col temp">22°C/15°C</div>
 				  </div>
 				  <div class="row">
 					  <div class="col-4 days">Samedi</div>
-					  <div class="col-1 p-0">
-						  <img class="img_list" src="images/cloud-solid.svg">
+					  <div class="col-2 p-0">
+						  <img class="img_list" src="images/sun.png">
 					  </div>
 					  <div class="col temp">18°C/7°C</div>
 				  </div>
 				  <div class="row">
 					  <div class="col-4 days">Dimanche</div>
-					  <div class="col-1 p-0">
-						  <img class="img_list" src="images/cloud-solid.svg">
+					  <div class="col-2 p-0">
+						  <img class="img_list" src="images/sun.png">
 					  </div>
 					  <div class="col temp">20°C/12°C</div>
 				  </div>
