--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="app-container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Misters wheather</a>
+        <a class="navbar-brand" href="#">Misters weather</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -28,59 +28,59 @@
       </nav>
       <div class="centered">
         <div class="main-section">
-            <h2>PARIS</h2>
-            <h3>7°</h3>
+            <h2 id="city-name">PARIS</h2>
+            <h3 id="temperature">7°</h3>
 		</div>
 		  <div class="card background_card">
 			  <div class="card-body">
-				  <div class="row">
+				  <div class="row hover-style" id="monday" >
 					  <div class="col-4 days">Lundi</div>
 					  <div class="col-1 p-0">
 						  <img class="img_list" src="images/cloud-solid.svg">
 					  </div>
-					  <div class="col temp">19°C/11°C</div>
+					  <div class="col temp" id="monday-value">19°C/11°C</div>
 				  </div>
-				  <div class="row">
+				  <div class="row hover-style" id="tuesday">
 					  <div class="col-4 days">Mardi</div>
 					  <div class="col-1 p-0">
 						  <img class="img_list" src="images/cloud-solid.svg">
 					  </div>
-					  <div class="col temp">17°C/14°C</div>
+					  <div class="col temp" id="tuesday-value">17°C/14°C</div>
 				  </div>
-				  <div class="row">
+				  <div class="row hover-style" id="wednesday">
 					  <div class="col-4 days">Mercredi</div>
 					  <div class="col-1 p-0">
 						  <img class="img_list" src="images/cloud-solid.svg">
 					  </div>
-					  <div class="col temp">20°C/13°C</div>
+					  <div class="col temp" id="wednesday-value">20°C/13°C</div>
 				  </div>
-				  <div class="row">
+				  <div class="row hover-style" id="thursday">
 					  <div class="col-4 days">Jeudi</div>
 					  <div class="col-1 p-0">
 						  <img class="img_list" src="images/cloud-solid.svg">
 					  </div>
-					  <div class="col temp">20°C/12°C</div>
+					  <div class="col temp" id="thursday-value">20°C/12°C</div>
 				  </div>
-				  <div class="row">
+				  <div class="row hover-style" id="friday">
 					  <div class="col-4 days">Vendredi</div>
 					  <div class="col-1 p-0">
 						  <img class="img_list" src="images/cloud-solid.svg">
 					  </div>
-					  <div class="col temp">22°C/15°C</div>
+					  <div class="col temp" id="friday-value">22°C/15°C</div>
 				  </div>
-				  <div class="row">
+				  <div class="row hover-style" id="saturday">
 					  <div class="col-4 days">Samedi</div>
 					  <div class="col-1 p-0">
 						  <img class="img_list" src="images/cloud-solid.svg">
 					  </div>
-					  <div class="col temp">18°C/7°C</div>
+					  <div class="col temp" id="saturday-value">18°C/7°C</div>
 				  </div>
-				  <div class="row">
+				  <div class="row hover-style" id="sunday">
 					  <div class="col-4 days">Dimanche</div>
 					  <div class="col-1 p-0">
 						  <img class="img_list" src="images/cloud-solid.svg">
 					  </div>
-					  <div class="col temp">20°C/12°C</div>
+					  <div class="col temp" id="sunday-value">20°C/12°C</div>
 				  </div>
 			  </div>
 		  </div>
@@ -88,10 +88,10 @@
 	</div>
 
     <!-- Optional JavaScript -->
-    <script src="/script.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="script.js"></script>  
   </body>
 </html>
