final version app

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
       <div class="centered">
         <div class="main-section">
             <h2 id="city-name">PARIS</h2>
-            <h3 id="temperature">7°</h3>
+			<p id="day">Lundi</p>
+            <h3 id="temperature_2m">7°</h3>
+			<p id="windspeed_10m"></p>
+			<p id="visibility"></p>
 		</div>
 		  <div class="card background_card">
 			  <div class="card-body">
