--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="main-section">
             <h2 id="city-name">PARIS</h2>
 			<p id="day">Lundi</p>
-            <h3 id="temperature_2m">7°</h3>
+            <h3 id="temperature_2m"></h3>
 			<p id="windspeed_10m"></p>
 			<p id="visibility"></p>
 		</div>
