--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+	<link rel="manifest" href="app.webmanisfest" />
     <title>Misters Weather</title>
   </head>
   <body>
@@ -22,10 +23,10 @@
             <a class="nav-item nav-link" id="london" href="#">Londre</a>
             <a class="nav-item nav-link" id="berlin" href="#">Berlin</a>
             <a class="nav-item nav-link disabled" id="madrid" href="#">Madrid</a>
+            <a class="nav-item nav-link disabled"><button type="button" class="btn btn-success add-button">Installer l'application</button></a>
           </div>
         </div>
       </nav>
-		<button class="add-button">Add to home screen</button>
       <div class="centered">
         <div class="main-section">
             <h2 id="city-name">PARIS</h2>
