--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 				  <div class="row hover-style" id="tuesday">
 					  <div class="col-4 days">Mardi</div>
 					  <div class="col-2 p-0">
-						  <img class="img_list" src="images/cloud-solid.svg">
+						  <img class="img_list" src="images/cloud.png">
 					  </div>
 					  <div class="col temp" id="tuesday-value">17°C/14°C</div>
 				  </div>
 				  <div class="row hover-style" id="wednesday">
 					  <div class="col-4 days">Mercredi</div>
 					  <div class="col-2 p-0">
-						  <img class="img_list" src="images/cloud-solid.svg">
+						  <img class="img_list" src="images/cloud.png">
 					  </div>
 					  <div class="col temp" id="wednesday-value">20°C/13°C</div>
 				  </div>
