--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#" id="paris">Paris <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" id="london" href="#">Londre</a>
+            <a class="nav-item nav-link" id="london" href="#">Londres</a>
             <a class="nav-item nav-link" id="berlin" href="#">Berlin</a>
             <a class="nav-item nav-link disabled" id="madrid" href="#">Madrid</a>
             <a class="nav-item nav-link disabled"><button type="button" class="btn btn-success add-button">Installer l'application</button></a>
