--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a class="nav-item nav-link" id="london" href="#">Londres</a>
             <a class="nav-item nav-link" id="berlin" href="#">Berlin</a>
             <a class="nav-item nav-link disabled" id="madrid" href="#">Madrid</a>
-            <a class="nav-item nav-link disabled"><button type="button" class="btn btn-success add-button">Installer l'application</button></a>
+            <a class="nav-item nav-link disabled"><button type="button" class="btn btn-success add-button">+ Installer l'application</button></a>
           </div>
         </div>
       </nav>
